EPMRPP-112091 || Fix LaunchFinish event (#2568)